clusters/k8s-robbinsdale/apps/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-server
  namespace: immich
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "immich.rajsingh.info"
    - "immich.k8s.rajsingh.info"
    - "immich.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: immich-server
          port: 2283
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
